@@ -12,3 +12,6 @@
 
   # Password of hosts. Empty by default
   #password: test
+
+  # By setting raw to true, all raw fields from the status metricset will be added to the event.
+  #raw: false
