@@ -3,3 +3,12 @@
 The MySQL `status` metricset collects data from MySQL by running a
 http://dev.mysql.com/doc/refman/5.7/en/show-status.html[`SHOW GLOBAL STATUS;`]
 SQL query. This query returns a large number of metrics.
+
+
+==== raw config option
+
+experimental[]
+
+The MySQL Status Metricset supports the `raw` config option. When enabled, in addition to the existing data structure, all fields available from the mysql service throgh `"SHOW /*!50002 GLOBAL */ STATUS;"` will be added to the event.
+
+These fields will be added under the namespace `mysql.status.raw`. The fields can vary from one MySQL instance to an other and no guarantees are provided for the  mapping of the fields as the mapping happens dynamically. This option is intended for enhance use cases.
